# HPC-Kalari

./: .gitignore  CMakeLists.txt  README.md
include/: IOManager.hpp  IOManagerFactory.hpp  VTKWriter.hpp  boundaryConditionTypeInterface.hpp  boundaryCreatorInterface.hpp  boundaryUpdaterInterface.hpp  dirichletBoundaryConditionImpl.hpp  dirichletBoundaryCreator.hpp  dirichletBoundaryTypeImpl.hpp  grid.hpp  hostTimer.hpp  initializer.hpp  jacobiInterface.hpp  jacobiSerialImpl.hpp  kernel.hpp  parameterObject.hpp  solver.hpp  state.hpp  structuredGrid.hpp  structuredVTKWriter.hpp  writer.hpp
input/: inputParams.txt
src/: dirichletBoundaryTypeImpl.cpp  hostTimer.cpp  jacobiSerialImpl.cpp  main.cpp  parameterObject.cpp  structuredGrid.cpp
